// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography variant "bodyA" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

<p
  className="sui-box emotion-0"
>
  bodyA
</p>
`;

exports[`Typography variant "bodyA" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<p
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</p>
`;

exports[`Typography variant "bodyB" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

<p
  className="sui-box emotion-0"
>
  bodyB
</p>
`;

exports[`Typography variant "bodyB" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<p
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</p>
`;

exports[`Typography variant "bodyC" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<p
  className="sui-box emotion-0"
>
  bodyC
</p>
`;

exports[`Typography variant "bodyC" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<p
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</p>
`;

exports[`Typography variant "bodyD" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

<p
  className="sui-box emotion-0"
>
  bodyD
</p>
`;

exports[`Typography variant "bodyD" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<p
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</p>
`;

exports[`Typography variant "command" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 3px 5px;
}

<code
  className="sui-box emotion-0"
>
  command
</code>
`;

exports[`Typography variant "command" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 3px 5px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<code
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</code>
`;

exports[`Typography variant "description" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

<p
  className="sui-box emotion-0"
>
  description
</p>
`;

exports[`Typography variant "description" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<p
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</p>
`;

exports[`Typography variant "hero" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
}

<h1
  className="sui-box emotion-0"
>
  hero
</h1>
`;

exports[`Typography variant "hero" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<h1
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</h1>
`;

exports[`Typography variant "lead" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

<h2
  className="sui-box emotion-0"
>
  lead
</h2>
`;

exports[`Typography variant "lead" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<h2
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</h2>
`;

exports[`Typography variant "lead-block" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

<h2
  className="sui-box emotion-0"
>
  lead-block
</h2>
`;

exports[`Typography variant "lead-block" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<h2
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</h2>
`;

exports[`Typography variant "lead-text" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
}

<h2
  className="sui-box emotion-0"
>
  lead-text
</h2>
`;

exports[`Typography variant "lead-text" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<h2
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</h2>
`;

exports[`Typography variant "link" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="sui-box emotion-0"
>
  link
</div>
`;

exports[`Typography variant "link" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</div>
`;

exports[`Typography variant "samplecode" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
}

<code
  className="sui-box emotion-0"
>
  samplecode
</code>
`;

exports[`Typography variant "samplecode" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<code
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</code>
`;

exports[`Typography variant "tiny" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
}

<small
  className="sui-box emotion-0"
>
  tiny
</small>
`;

exports[`Typography variant "tiny" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<small
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</small>
`;

exports[`Typography variant "title" renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
}

<h3
  className="sui-box emotion-0"
>
  title
</h3>
`;

exports[`Typography variant "title" with tooltip renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0.emotion-0 {
  max-width: 650px;
  width: 100px;
}

<h3
  className="sui-box emotion-0"
  onFocus={[Function]}
  onMouseEnter={[Function]}
  text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
>
  This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
</h3>
`;

exports[`Typography with maxLines renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

<p
  className="sui-box emotion-0"
>
  Hello
</p>
`;

exports[`Typography with multiple nested chidldren renders correctly 1`] = `
.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
}

.emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

<p
  className="sui-box emotion-1"
>
  Lorem
  <div>
    Ipsum
  </div>
  <h3
    className="sui-box emotion-0"
  >
    <span>
      Dolor
    </span>
  </h3>
  Sit
</p>
`;
